@@ -1,3 +1,4 @@
+	-- Updated documentation re hibernate configuration. (Documentation was several years stale.)
 	-- Merged John Sumsion's remarkable integration of c3p0's full SourceForge history into the
 	   git repository. (Enormous, huge thanks to John Sumsion!)
 c3p0-0.9.2-pre8
